# aoc2022

./: Cargo.toml  README.md  download-inputs.sh
benches/: benchmarks.rs
src/: lib.rs
