[package]
edition = "2021"
name = "aoc2022"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "common"
path = "src/lib.rs"

[dependencies]
itertools = "0.10.5"

[dev-dependencies]
criterion = {version = "0.4.0", features = ['real_blackbox']}

[[bench]]
harness = false
name = "benchmarks"
