[package]
edition = "2021"
name = "aoc2022"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "common"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.66"
itertools = "0.10.5"
petgraph = "0.6.2"
regex = "1.7.0"
take-until = "0.1.0"

[dev-dependencies]
criterion = {version = "0.4.0", features = ['real_blackbox']}

[[bench]]
harness = false
name = "benchmarks"
